--- a/LND/UT2/U2_A2_Adrian_Ibarra_listas.html
+++ b/LND/UT2/U2_A2_Adrian_Ibarra_listas.html
@@ -7,7 +7,34 @@
 </head>
 <body>
     <ol type="1">
-
-    </ol>
+        <li>Primer elemento</li>
+        <li>Segundo elemento</li>
+        <li>Tercer elemento</li>
+     </ol>
+     <ol type="i">
+        <li>Primer elemento</li>
+        <li>Segundo elemento</li>
+        <li>Tercer elemento</li>
+     </ol>
+     <ol start="6">
+        <li>Primer elemento</li>
+        <li>Segundo elemento</li>
+        <li>Tercer elemento</li>
+     </ol>
+     <ol type="circle"></ol>
+        <li>Primer elemento</li>
+        <li>Segundo elemento</li>
+        <li>Tercer elemento</li>
+     </ol>
+     <ol type="square"></ol>
+        <li>Primer elemento</li>
+        <li>Segundo elemento</li>
+        <li>Tercer elemento</li>
+     </ol>
+     <ol type="disc"></ol>
+        <li>Primer elemento</li>
+        <li>Segundo elemento</li>
+        <li>Tercer elemento</li>
+     </ol>
 </body>
 </html>
