--- a/LND/UT2/U2_A2_Adrian_Ibarra_listas.html
+++ b/LND/UT2/U2_A2_Adrian_Ibarra_listas.html
@@ -21,20 +21,20 @@
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
      </ol>
-     <ol type="circle"></ol>
+     <ul type="circle"></ol>
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
-     </ol>
-     <ol type="square"></ol>
+     </ul>
+     <ul type="square"></ol>
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
-     </ol>
-     <ol type="disc"></ol>
+     </ul>
+     <ul type="disc"></ol>
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
-     </ol>
+     </ul>
 </body>
 </html>
