Se termina tarea tabla

--- a/LND/UT2/U2_A4.- Realizar_la_tabla_que_se_adjunta.html
+++ b/LND/UT2/U2_A4.- Realizar_la_tabla_que_se_adjunta.html
@@ -5,41 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLA COMIDA</title>
 </head>
-<body>
-    <table border="10", >
+<body align="center">
+    <table border="1">
         <tbody>
-            <tr >
-                <th colspan="6">Los Alimentos</th>
+            <tr>
+                <td colspan="6">Los alimentos</td>
             </tr>
             <tr>
-                <td></td>
-                <td colspan="2">wgsegsgsdgdg</td>
-                <td colspan="2">gfsjiddkswadbfhjsadebf</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>gSrGFDADFHADGFA</td>
+                <td>Energéticos</td>
+                <td colspan="2">Plásticos</td>
+                <td colspan="2">Reguladores</td>
                 <td></td>
             </tr>
             <tr>
-                <td></td>
-                <td>DGFDGFGFDDGF</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Azúcares</td>
+                <td>Grasas</td>
+                <td colspan="2">Proteinas</td>
+                <td colspan="2">Vitaminas</td>
             </tr>
             <tr>
-                <td>GDFDGFDFGDGF</td>
-                <td>GDFGFDGFDGFD</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Dulce</td>
+                <td>Carne</td>
+                <td>Huevos</td>
+                <td>Legumbres</td>
+                <td>Frutas</td>
+                <td>Verduras</td>
+            </tr>
+            <tr>
+                <td><img src="img/dulces.png"></td>
+                <td><img src="img/carne.png"></td>
+                <td><img src="img/huevos.png"></td>
+                <td><img src="img/legumbres.png"></td>
+                <td><img src="img/frutas.png"></td>
+                <td><img src="img/verduras.png"></td>
             </tr>
         </tbody>
     </table>
