se sube cambio ALT

--- a/LND/UT2/U2_A4.- Realizar_la_tabla_que_se_adjunta.html
+++ b/LND/UT2/U2_A4.- Realizar_la_tabla_que_se_adjunta.html
@@ -32,12 +32,12 @@
                 <td>Verduras</td>
             </tr>
             <tr>
-                <td><img src="img/dulces.png"></td>
-                <td><img src="img/carne.png"></td>
-                <td><img src="img/huevos.png"></td>
-                <td><img src="img/legumbres.png"></td>
-                <td><img src="img/frutas.png"></td>
-                <td><img src="img/verduras.png"></td>
+                <td><img src="img/dulces.png" alt="copa choco"></td>
+                <td><img src="img/carne.png" alt="hamburguesa"></td>
+                <td><img src="img/huevos.png" alt="huevo"></td>
+                <td><img src="img/legumbres.png" alt="legumbres"></td>
+                <td><img src="img/frutas.png" alt="frutas"></td>
+                <td><img src="img/verduras.png" alt="verduras"></td>
             </tr>
         </tbody>
     </table>
