Se añaden mas datos

--- a/LND/UT2/U2_A4_Adrian_Ibarra_tablas.html
+++ b/LND/UT2/U2_A4_Adrian_Ibarra_tablas.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLA COMIDA</title>
 </head>
-<body align="center">
+<body>
     <table border="1">
-        <tbody>
+        <tbody align="center">
             <tr>
                 <td colspan="6">Los alimentos</td>
             </tr>
@@ -41,5 +41,7 @@
             </tr>
         </tbody>
     </table>
+    
 </body>
+<a href="/LND/UT2/indexAdrian.html">Inicio</a>
 </html>
