--- a/LND/UT2/U2_A2_Adrian_Ibarra_listas.html
+++ b/LND/UT2/U2_A2_Adrian_Ibarra_listas.html
@@ -21,17 +21,17 @@
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
      </ol>
-     <ul type="circle"></ol>
+     <ul type="circle">
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
      </ul>
-     <ul type="square"></ol>
+     <ul type="square">
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
      </ul>
-     <ul type="disc"></ol>
+     <ul type="disc">
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
         <li>Tercer elemento</li>
