Se crea nueva estrucira para A2

--- a/LND/UT2/A2-TABLAS/U2_A4_Adrian_Ibarra_tablas.html
+++ b/LND/UT2/A2-TABLAS/U2_A4_Adrian_Ibarra_tablas.html
@@ -32,12 +32,12 @@
                 <td>Verduras</td>
             </tr>
             <tr>
-                <td><img src="img/dulces.png" alt="copa choco"></td>
-                <td><img src="img/carne.png" alt="hamburguesa"></td>
-                <td><img src="img/huevos.png" alt="huevo"></td>
-                <td><img src="img/legumbres.png" alt="legumbres"></td>
-                <td><img src="img/frutas.png" alt="frutas"></td>
-                <td><img src="img/verduras.png" alt="verduras"></td>
+                <td><a href="/LND/UT2/A2-TABLAS/COPACHOCO.html"><img src="img/dulces.png" alt="copa choco"></a></td>
+                <td><a href="/LND/UT2/A2-TABLAS/HAMBURGUESA.html"><img src="img/carne.png" alt="hamburguesa"></a></td>
+                <td><a href="/LND/UT2/A2-TABLAS/HUEVOS.html"><img src="img/huevos.png" alt="huevo"></a></td>
+                <td><a href="/LND/UT2/A2-TABLAS/LEGUMBRES.html"><img src="img/legumbres.png" alt="legumbres"></a></td>
+                <td><a href="/LND/UT2/A2-TABLAS/FRUTAS.html"><img src="img/frutas.png" alt="frutas"></a></td>
+                <td><a href="/LND/UT2/A2-TABLAS/VERDURAS.html"><img src="img/verduras.png" alt="verduras"></a></td>
             </tr>
         </tbody>
     </table>
