--- a/LND/UT2/A2-TABLAS/indexAdrian.html
+++ b/LND/UT2/A2-TABLAS/indexAdrian.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Alimentos</h1>
     <ul>
-        <li><a href="/LND/UT2/U2_A4_Adrian_Ibarra_tablas.html">Tabla Alimentos</a></li>
-        <li><a href="/LND/UT2/misfiguras.html">Mis Figuras</a></li>
+        <li><a href="/LND/UT2/A2-TABLAS/U2_A4_Adrian_Ibarra_tablas.html">Tabla Alimentos</a></li>
+        <li><a href="/LND/UT2/A2-TABLAS/misfiguras.html">Mis Figuras</a></li>
 
     </ul>
 </body>
