--- a/LND/UT2/A2-TABLAS/misfiguras.html
+++ b/LND/UT2/A2-TABLAS/misfiguras.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mis Figuras</title>
 </head>
 <body>
     <picture>
         <source
           media="(min-width: 650px)"
-          srcset="/LND/UT2/img/carne.png">
+          srcset="/LND/UT2/A2-TABLAS/img/peliagudo.jpg">
         <source
           media="(min-width: 465px)"
-          srcset="/LND/UT2/img/carne.png">
+          srcset="/LND/UT2/A2-TABLAS/img/turbulentazo.jpg">
         <img
-          src="/LND/UT2/img/carne.png"
-          alt="a cute kitten">
+          src="/LND/UT2/A2-TABLAS/img/matracazo.jpg"
+          alt="tiger and wolf">
       </picture> 
 </body>
 </html>
