se sube el primer ejemplo (legumbres.html)

--- a/LND/UT2/A2-TABLAS/LEGUMBRES.html
+++ b/LND/UT2/A2-TABLAS/LEGUMBRES.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lentejas</title>
+    <title>Legumbres</title>
 </head>
 <body>
     <style>
-
-
+        body {
+            background-color: burlywood;
+        }
+        h1 {
+            text-align: center;
+        }
+        div {
+           text-align: center;
+        }
+        p {
+            font-family: cursive;
+            text-align: justify;
+        }
     </style>
-
+    <h1>Legumbres</h1>
+    <hr>
+    <p>Las legumbres constituyen un grupo de alimentos muy homogéneo, desarrollados a partir del gineceo, de un solo carpelo y que se abre tanto por la sutura ventral como por el nervio dorsal, en dos valvas y con las semillas en una hilera ventral.</p>
+    <div><img src="/LND/UT2/A2-TABLAS/img/legumbres.jpg">
+    </div>
 </body>
 </html>
